--- a/composer.json
+++ b/composer.json
@@ -16,25 +16,19 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.4",
         "filament/filament": "^3.2",
-        "spatie/laravel-package-tools": "^1.14",
-        "illuminate/contracts": "^9.0|^10.0|^11.0"
+        "illuminate/contracts": "^12.0",
+        "spatie/laravel-package-tools": "^1.92"
     },
     "require-dev": {
-        "filament/support": "^3.0",
-        "filament/upgrade": "^3.2",
-        "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^6.0|^7.0|^8.1",
-        "nunomaduro/larastan": "^2.0",
-        "orchestra/testbench": "^7.22|^8.0|^9.0",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0",
-        "pestphp/pest-plugin-livewire": "^3.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "spatie/laravel-ray": "^1.26"
+        "spatie/laravel-ray": "^1.39",
+        "larastan/larastan": "^3.0",
+        "laravel/pint": "^1.13",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^8.6",
+        "pestphp/pest": "^3.7",
+        "pestphp/pest-plugin-laravel": "^3.1"
     },
     "autoload": {
         "psr-4": {
